Use tree component instead of tree view component in drop down tree

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -26,6 +26,7 @@
                             [checkedKeys]="treeCheckedKeys"
                             (checkedKeysChange)="onTreeCheckedKeysChange($event)"
                             monaTreeViewExpandable
+                            monaTreeViewFilterable
                             [expandedKeys]="treeExpandedKeys"
                             (expandedKeysChange)="onTreeExpandedKeysChange($event)"
                             [monaTreeViewSelectable]="{ enabled: true, mode: 'multiple', childrenOnly: false }"
@@ -461,13 +462,21 @@
                                 <mona-drop-down-tree [data]="treeData"
                                                      children="items"
                                                      textField="text"
-                                                     [itemDisabled]="dropdownTreeDisabler"
+                                                     valueField="id"
                                                      monaDropDownTreeExpandable
+                                                     monaDropDownTreeFilterable
+                                                     monaDropDownTreeDisable
+                                                     [disableBy]="'id'"
+                                                     [disabledKeys]="treeDisabledKeys"
                                                      [ngModel]="dropdownTreeSelectedValue"
                                                      (ngModelChange)="onDropdownTreeValueChange($event)"
                                                      [expandedKeys]="dropdownTreeExpandedKeys"
                                                      (expandedKeysChange)="onDropdownTreeExpandedKeysChange($event)"
-                                                     style="width: 220px;"></mona-drop-down-tree>
+                                                     style="width: 220px;">
+                                    <ng-template monaDropDownTreeNodeTemplate let-dataItem>
+                                        <span style="color: #00a86b;">{{dataItem.text}}</span>
+                                    </ng-template>
+                                </mona-drop-down-tree>
                                 <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value"
                                                    style="width: auto; min-width: 200px;"
                                                    monaDropDownGroupable groupBy="group"
