--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -476,6 +476,15 @@
                                     <ng-template monaDropDownTreeNodeTemplate let-dataItem>
                                         <span style="color: #00a86b;">{{dataItem.text}}</span>
                                     </ng-template>
+                                    <ng-template monaDropDownTreeHeaderTemplate>
+                                        <div style="background: var(--mona-background-dark); border-bottom: 1px solid var(--mona-border-color-dark);">Header</div>
+                                    </ng-template>
+                                    <ng-template monaDropDownTreeFooterTemplate>
+                                        <div style="background: var(--mona-background-dark); border-top: 1px solid var(--mona-border-color-dark);">Footer</div>
+                                    </ng-template>
+                                    <ng-template monaDropDownTreeNoDataTemplate>
+                                        <div>No data.</div>
+                                    </ng-template>
                                 </mona-drop-down-tree>
                                 <mona-multi-select [data]="dropdownListDataItems" textField="text" valueField="value"
                                                    style="width: auto; min-width: 200px;"
