--- a/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/auto-complete/components/auto-complete.component.html
@@ -1,6 +1,6 @@
-<div class="mona-auto-complete" [ngClass]="{'mona-disabled': disabled}"
-     [attr.tabindex]="-1" #dropdownWrapper>
+<div class="mona-auto-complete" #dropdownWrapper>
     <input monaTextBox class="mona-input-inner"
+           [disabled]="disabled"
            [ngModel]="autoCompleteValue()"
            (ngModelChange)="autoCompleteValue$.next($event)"
            (keydown)="onKeydown($event)">
