--- a/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
+++ b/projects/mona-ui/src/lib/dropdowns/drop-down-list/components/drop-down-list/drop-down-list.component.html
@@ -1,5 +1,4 @@
-<div class="mona-dropdown-list" [ngClass]="{'mona-disabled': disabled}"
-     [attr.tabindex]="disabled ? -1 : 0" (click)="open()" #dropdownWrapper>
+<div class="mona-dropdown-list" (click)="open()" #dropdownWrapper>
     <div class="mona-dropdown-value">
         @if (!valueTemplate) {
             @if (selectedListItem()) {
