--- a/projects/mona-ui/src/lib/buttons/split-button/components/split-button/split-button.component.html
+++ b/projects/mona-ui/src/lib/buttons/split-button/components/split-button/split-button.component.html
@@ -1,12 +1,12 @@
 <div class="mona-split-button" #wrapperElementRef>
-    <button monaButton (click)="buttonClick.emit()" [disabled]="disabled" tabindex="0" #mainButton>
+    <button monaButton (click)="buttonClick.emit()" [disabled]="disabled" [tabindex]="0" #mainButton>
         @if (textTemplate) {
             <ng-container [ngTemplateOutlet]="textTemplate" *ngIf="textTemplate"></ng-container>
         } @else {
             <span class="mona-split-button-text">{{text}}</span>
         }
     </button>
-    <button monaButton [disabled]="disabled" tabindex="0" #menuButton>
+    <button monaButton [disabled]="disabled" [tabindex]="-1" #menuButton>
         <fa-icon [icon]="menuIcon"></fa-icon>
     </button>
     <mona-contextmenu [target]="menuButton" trigger="click" [minWidth]="popupWidth" [offset]="popupOffset" popupClass="mona-split-button-popup"
