--- a/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
+++ b/projects/mona-ui/src/lib/date-inputs/date-time-picker/date-time-picker.component.html
@@ -1,13 +1,13 @@
-<div class="mona-date-time-picker" [ngClass]="{'mona-disabled': disabled}" #popupAnchor>
+<div class="mona-date-time-picker" #popupAnchor>
     <input monaTextBox class="mona-input-inner" [disabled]="disabled" [readonly]="readonly"
            [ngModel]="currentDateString()"
            (ngModelChange)="onDateStringEdit($event)" (blur)="onDateInputBlur()">
     <button monaButton class="mona-input-button" (click)="onDateInputButtonClick()"
-            [disabled]="disabled" [tabIndex]="-1">
+            [disabled]="disabled" [tabindex]="-1">
         <fa-icon [icon]="dateIcon"></fa-icon>
     </button>
     <button monaButton class="mona-input-button" (click)="onTimeInputButtonClick()"
-            [disabled]="disabled" [tabIndex]="-1">
+            [disabled]="disabled" [tabindex]="-1">
         <fa-icon [icon]="timeIcon"></fa-icon>
     </button>
 </div>
