--- a/projects/mona-ui/src/lib/common/list/components/list/list.component.html
+++ b/projects/mona-ui/src/lib/common/list/components/list/list.component.html
@@ -12,7 +12,8 @@
     }
     @if (listService.virtualScrollOptions().enabled) {
         @if (listService.viewItems().length !== 0) {
-            <cdk-virtual-scroll-viewport [itemSize]="listService.virtualScrollOptions().height">
+            <cdk-virtual-scroll-viewport [itemSize]="listService.virtualScrollOptions().height"
+                                         [style.height]="viewportHeight()">
                 <ul [tabIndex]="-1">
                     <ng-container *cdkVirtualFor="let item of listService.viewItems()">
                         <ng-container [ngTemplateOutlet]="listItemTemplate"
