feat: add type, class and style inputs for text-box input element

--- a/projects/mona-ui-tester/src/app/app.component.html
+++ b/projects/mona-ui-tester/src/app/app.component.html
@@ -508,6 +508,7 @@
                                                 style="font-weight: bold; color: deepskyblue;">+{{dataItems.length - multiSelectTagCount}}</span> items</span>
                                     </ng-template>
                                 </mona-multi-select>
+                                <mona-text-box type="text" [inputClass]="['aa', 'bb']" [inputStyle]="{color: 'coral', fontWeight: 'bold'}"></mona-text-box>
                             </div>
 
                             <div style="display: flex; align-items: center; margin-top: 40px;">
