--- a/projects/mona-ui/styles/theme.scss
+++ b/projects/mona-ui/styles/theme.scss
@@ -826,58 +826,63 @@ button.mona-grid-filtered {
 
 /** Check Box */
 input[type="checkbox"][monaCheckBox] {
-    display: none;
-    & + label {
-        display: flex;
-        align-items: center;
-        cursor: pointer;
-        color: var(--mona-text-inverted);
-        user-select: none;
-        &:before {
-            content: " ";
-            background-color: var(--mona-background);
-            border: 1px solid var(--mona-border-color);
-            border-radius: var(--mona-border-radius);
-            display: inline-flex;
-            align-items: center;
-            justify-content: center;
-            width: 20px;
-            height: 20px;
-            margin-right: 4px;
-            transition: background-color 0.3s ease-out, color 0.3s ease-out, border 0.3s ease-out, box-shadow 0.3s ease-out;
-        }
+    appearance: none;
+    width: 20px;
+    height: 20px;
+    display: inline-block;
+    place-content: center;
+    cursor: pointer;
+    transition: background-color 0.15s ease-out, border-color 0.15s ease-out, color 0.15s ease-out, box-shadow 0.15s ease-out;
+    margin-right: 4px;
+    outline: none;
+    &::before {
+        content: "\2714";
+        color: transparent;
+        width: 20px;
+        height: 20px;
+        display: inline-grid;
+        background: var(--mona-background);
+        box-shadow: inset 0 0 0 1px var(--mona-border-color);
+        border-radius: var(--mona-border-radius);
+        padding-bottom: 1px;
+        place-content: center;
     }
-    &:checked + label:before {
+    &:checked::before {
         content: "\2714";
         background-color: var(--mona-primary);
         color: var(--mona-text-inverted);
         border-color: var(--mona-selected-border-color);
     }
-    &:disabled + label {
-        cursor: default;
+    &:disabled {
+        cursor: not-allowed;
         pointer-events: none;
+        opacity: 0.6;
     }
-    &:disabled + label:before {
-        cursor: default;
-        pointer-events: none;
+    &:indeterminate::before {
+        background: var(--mona-primary);
+        color: transparent;
+    }
+    &:focus, &:focus-within {
+        box-shadow: var(--mona-focus-shadow);
+    }
+
+    & + label {
+        display: inline-flex;
+        align-items: center;
+        cursor: pointer;
+        color: var(--mona-text);
+        user-select: none;
+    }
+}
+
+label.mona-check-box {
+    cursor: pointer;
+    color: var(--mona-text);
+    user-select: none;
+    @include font-medium;
+
+    &.mona-disabled {
         @include disabled;
-        border: 1px solid var(--mona-border-color);
-    }
-    &:checked:disabled + label:before {
-        background-color: var(--mona-disabled-color);
-        color: var(--mona-disabled-color);
-        @include disabled;
-        border: 1px solid var(--mona-border-color);
-    }
-    &:indeterminate + label:before {
-        content: " ";
-        background-color: var(--mona-primary);
-        color: var(--mona-text-inverted);
-        border: 1px solid var(--mona-selected-border-color);
-    }
-    &:indeterminate:disabled + label:before {
-        @include disabled;
-        border: 1px solid var(--mona-selected-border-color);
     }
 }
 
